--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
@@ -38,10 +38,9 @@ list-page-description, pdf-export button {
   flex-shrink: 0;
 }
 
-.test{
-  margin: auto;
+.saveLoad{
+  margin-inline: auto;
 }
-.test button{
-  margin: 8px;
-  background: #3C64F7;
+.saveLoad button{
+  margin: 0px 8px;
 }
