added background color to active save

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -61,10 +61,10 @@
     </ng-template>
 
     <div class="saveLoad">
-      <button mat-mini-fab color="primary" (click)="save()" matTooltip="Save New Research">
+      <button mat-mini-fab color="primary" [class]= "activeSave ? 'saveActive' : ''" (click)="save()" matTooltip="Save New Research">
         <mat-icon [svgIcon]= "activeSave ? 'bookmark_solid' : 'bookmark_border'" ></mat-icon>
       </button>
-      <button mat-mini-fab color="primary" [disabled]='disabledLoad' (click)="load()" matTooltip="Load Research">
+      <button mat-mini-fab color="primary" [disabled]='disabledLoad' (click)="load()" matTooltip="Load Research" [class]= "activeSave ? 'saveActive' : ''">
         <mat-icon svgIcon="folder_open"></mat-icon>
       </button>
     </div>
