--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
@@ -44,3 +44,6 @@ list-page-description, pdf-export button {
 .saveLoad button{
   margin: 0px 8px;
 }
+.saveActive{
+  background: #001EC7 !important;
+}
