--- a/libs/contract/src/lib/contract/list/external-sales/external-sales.component.html
+++ b/libs/contract/src/lib/contract/list/external-sales/external-sales.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="sales?.length; else empty">
   <h3>Sales external to Archipel Content</h3>
-  <bf-table [source]="sales" clickable useFilter pagination="50" (rowClick)="goToSale($event)">
+  <bf-table [source]="sales" clickable useFilter pagination="50" (rowClick)="goToContract($event)">
     <ng-template colRef="_meta.createdAt" label="Import Date" let-date>{{ date | date:'MM/dd/yyyy'}}</ng-template>
     <ng-template colRef="licensor" label="Licensor" let-licensor sort>{{ licensor | maxLength:50 }}</ng-template>
     <ng-template colRef="licensee" label="Licensee" let-licensee sort>{{ licensee | maxLength:50 }}</ng-template>
