--- a/libs/contract/src/lib/contract/list/mandates/mandates.component.html
+++ b/libs/contract/src/lib/contract/list/mandates/mandates.component.html
@@ -1,6 +1,5 @@
 <ng-container *rxLet="filter$; let filter">
-  <ng-content></ng-content>
-  <ng-content select="empty"></ng-content>
+  <h3>List of Mandates</h3>
   <header mat-tab-nav-bar fxLayout="row" fxLayoutAlign="space-between end">
     <button mat-tab-link (click)="resetFilter()" [active]="filter === ''">
       All <span *ngIf="(mandateCount$ | async) as mandateCount">({{ mandateCount.all }})</span>
@@ -15,8 +14,8 @@
       Declined <span *ngIf="(mandateCount$ | async) as mandateCount">({{ mandateCount.declined }})</span>
     </button>
   </header>
-  <bf-table [source]="mandates | filterBy: filterByStatus: filterForm.value" clickable useFilter
-    pagination="10" (rowClick)="goToMandate($event)">
+  <bf-table [source]="mandates | filterBy: filterByStatus: filterForm.value" clickable useFilter pagination="10"
+    (rowClick)="goToContract($event)">
     <ng-template colRef="_meta.createdAt" label="Date" let-date>{{ date | date:'MM/dd/yyyy'}}</ng-template>
     <ng-template colRef="licensor" label="Licensor" let-licensor sort>{{ licensor | maxLength:50 }}</ng-template>
     <ng-template colRef="licensee" label="Licensee" let-licensee sort>{{ licensee | maxLength:50 }}</ng-template>
