--- a/apps/financiers/financiers/src/app/marketplace/title/list/list.component.scss
+++ b/apps/financiers/financiers/src/app/marketplace/title/list/list.component.scss
@@ -37,3 +37,13 @@ list-page-description, pdf-export button {
   margin-left: auto;
   flex-shrink: 0;
 }
+
+.saveLoad{
+  margin-inline: auto;
+}
+.saveLoad button{
+  margin: 0px 8px;
+}
+.saveActive{
+  background: #001EC7 !important;
+}
