--- a/apps/financiers/financiers/src/app/marketplace/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/title/list/list.component.html
@@ -73,7 +73,7 @@
 
     <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
-      <span>Clear Filterssss</span>
+      <span>Clear Filters</span>
     </button>
 
   </list-filter>
