remove class 'saveLoad'

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -60,7 +60,7 @@
       <filter-running-time [form]="searchForm.runningTime"></filter-running-time>
     </ng-template>
 
-    <div class="saveLoad">
+    <div>
       <button mat-mini-fab color="primary" [class]= "activeSave || enabledSave ? 'saveActive' : ''" (click)="save()" matTooltip="Save New Research">
         <mat-icon [svgIcon]= "activeSave ? 'bookmark_solid' : 'bookmark_border'" ></mat-icon>
       </button>
