--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -59,7 +59,7 @@
       <filter-budget fxLayout="column" [form]="searchForm.minBudget"></filter-budget>
     </ng-template>
 
-    <div class="saveLoad">
+    <div>
       <button mat-mini-fab color="primary" [class]= "activeSave || enabledSave ? 'saveActive' : ''" (click)="save()" matTooltip="Save New Research">
         <mat-icon [svgIcon]= "activeSave ? 'bookmark_solid' : 'bookmark_border'" ></mat-icon>
       </button>
