remove class 'translucent'

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -69,7 +69,7 @@
       </button>
     </div>
 
-    <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
+    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
       <span>Clear Filters</span>
     </button>
