--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.scss
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.scss
@@ -8,6 +8,15 @@ list-filter {
   filter-budget {
     padding: 0 16px;
   }
+  div {
+    margin-inline: auto;  
+    button {
+      margin: 0px 8px;  
+      &.saveActive {
+        background-color: #001EC7;
+      }
+    } 
+  }
 }
 
 mat-form-field {
