Create buttons states

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -61,10 +61,10 @@
     </ng-template>
 
     <div>
-      <button mat-mini-fab color="primary" [class]= "activeSave || enabledSave ? 'saveActive' : ''" (click)="save()" matTooltip="Save New Research">
-        <mat-icon [svgIcon]= "activeSave ? 'bookmark_solid' : 'bookmark_border'" ></mat-icon>
+      <button mat-mini-fab color="primary" [class]="buttonsState.save === 'enabledAndActive' || buttonsState.save === 'active' ? 'saveActive' : ''" (click)="save()" matTooltip="Save New Research">
+        <mat-icon [svgIcon]= "buttonsState.save === 'enabledAndActive' ? 'bookmark_solid' : 'bookmark_border'" ></mat-icon>
       </button>
-      <button mat-mini-fab color="primary" [disabled]='disabledLoad' (click)="load()" matTooltip="Load Research" [class]= "activeSave ? 'saveActive' : ''">
+      <button mat-mini-fab color="primary" [disabled]="buttonsState.load === 'disabled'" (click)="load()" matTooltip="Load Research" [class]= "buttonsState.load === 'active' ? 'saveActive' : ''">
         <mat-icon svgIcon="folder_open"></mat-icon>
       </button>
     </div>
