avoid infinite loading

--- a/apps/crm/crm/src/app/crm/pages/contracts/term-form/term-form.component.html
+++ b/apps/crm/crm/src/app/crm/pages/contracts/term-form/term-form.component.html
@@ -1,5 +1,7 @@
 <a mat-icon-button routerLink="..">
   <mat-icon svgIcon="arrow_back"></mat-icon>
 </a>
-<term-form [titleId]="titleId$ | async">
-</term-form>
+<ng-container *ngIf="contractId$ | async as contractId">
+  <term-form [titleId]="titleId$ | async" [backUrl]="['/c/o/dashboard/crm/contracts/', contractId]">
+  </term-form>
+</ng-container>
