--- a/libs/ui/src/lib/layout/dashboard/dashboard.component.scss
+++ b/libs/ui/src/lib/layout/dashboard/dashboard.component.scss
@@ -1,11 +1,17 @@
 @use '@angular/material' as mat;
 
 :host {
-  display: block;
+  display: flex;
+  flex-direction: row;
   height: 100%;
 }
 
-mat-sidenav {
+.logo {
+  height: clamp(32px, 5vw, 48px);
+  display: block;
+}
+
+#dashboard-aside {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -18,7 +24,8 @@ mat-sidenav-container {
   height: 100%;
 }
 
-mat-sidenav-content {
+#dashboard-content {
+  width: 100%;
   height: 100%;
   overflow: hidden;
 
