--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -113,7 +113,7 @@
       <header>
         <button mat-button color="primary" [disabled]="!invitations.length" (click)="exportScreenerAnalytics()">Export to .CSV</button>
       </header>
-      <bf-table class="screenings" [source]="invitations" clickable useFilter pagination="5" (rowClick)="goToBuyer($event)">
+      <bf-table class="screenings" [source]="invitations" useFilter pagination="5">
         <ng-template colRef label="Name" let-invitation="item" sort [filter]="filters.name">
           <b>{{ invitation | guest:'user' | displayName }}</b>
         </ng-template>
@@ -141,6 +141,15 @@
         </ng-template>
         <ng-template colRef="watchInfos.date" label="Watching Status" let-date sort>
           <bf-tag *ngIf="date | isWatchingNow">Watching Now</bf-tag>
+        </ng-template>
+        <ng-template colRef label="Action" let-item sticky>
+          <ng-container *ngIf="item | guest:'user' as user">
+            <ng-container *ngIf="user.orgId">
+              <a [routerLink]="['../../buyer/', user.uid]">
+                <mat-icon svgIcon="launch"></mat-icon>
+              </a>
+            </ng-container>
+          </ng-container>
         </ng-template>
       </bf-table>
     </ng-container>
